--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,19 @@
-<p>post-page works!</p>
+<div class="post">
+    <div class="header">
+        <h1>Post Title</h1>
+
+        <button routerLink="/" class="btn btn-link"
+        >На головну</button>
+    </div>
+    <div class="info">
+        <strong>Тут Автор </strong>
+        <small> 14.05.2020</small>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi autem deserunt impedit maiores natus nesciunt ratione similique, sunt vel veritatis voluptatibus, voluptatum. Ab commodi consequuntur corporis cumque deleniti deserunt, dolorum, est eveniet expedita facilis harum impedit modi molestias mollitia nam necessitatibus nihil, nisi ratione recusandae similique sunt suscipit unde voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi autem deserunt impedit maiores natus nesciunt ratione similique, sunt vel veritatis voluptatibus, voluptatum. Ab commodi consequuntur corporis cumque deleniti deserunt, dolorum, est eveniet expedita facilis harum impedit modi molestias mollitia nam necessitatibus nihil, nisi ratione recusandae similique sunt suscipit unde voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi autem deserunt impedit maiores natus nesciunt ratione similique, sunt vel veritatis voluptatibus, voluptatum. Ab commodi consequuntur corporis cumque deleniti deserunt, dolorum, est eveniet expedita facilis harum impedit modi molestias mollitia nam necessitatibus nihil, nisi ratione recusandae similique sunt suscipit unde voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi autem deserunt impedit maiores natus nesciunt ratione similique, sunt vel veritatis voluptatibus, voluptatum. Ab commodi consequuntur corporis cumque deleniti deserunt, dolorum, est eveniet expedita facilis harum impedit modi molestias mollitia nam necessitatibus nihil, nisi ratione recusandae similique sunt suscipit unde voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi autem deserunt impedit maiores natus nesciunt ratione similique, sunt vel veritatis voluptatibus, voluptatum. Ab commodi consequuntur corporis cumque deleniti deserunt, dolorum, est eveniet expedita facilis harum impedit modi molestias mollitia nam necessitatibus nihil, nisi ratione recusandae similique sunt suscipit unde voluptate?</p>
+    </div>
+</div>
