--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -1,2 +1,20 @@
-<h1>admin-layout</h1>
-<router-outlet></router-outlet>
+<div class="navbar bg-primary">
+    <h1>
+        <a routerLink="/">Angular Admin</a>
+    </h1>
+    <ul>
+        <li routerLinkActive="active">
+            <a [routerLink]="['/admin', 'dashboard']">Головна</a>
+        </li>
+        <li routerLinkActive="active">
+            <a [routerLink]="['/admin', 'create']">Створити</a>
+        </li>
+        <li>
+            <a href="#" (click)="logout($event)">Вихід</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
