--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,43 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+    <h2>Війти в панель адміністратора</h2>
+    <div
+            class="form-control"
+            [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid}"
+    >
+        <label for="email">Email</label>
+        <input id="email" type="email">
+        <div
+                *ngIf="form.get('email').touched && form.get('email').invalid"
+                class="validation"
+        >
+            <small *ngIf="form.get('email').errors.required">
+                Введіть поле Email
+            </small>
+            <small *ngIf="form.get('email').errors.email">
+                Ввудіть коректний параль
+            </small>
+        </div>
+    </div>
+
+    <div
+            class="form-control"
+            [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
+    >
+        <label
+                for="password"
+        >Пароль</label>
+        <input id="password" type="password">
+        <div
+                class="validation"
+                *ngIf="form.get('password').touched && form.get('password').invalid"
+        >
+            <small>error</small>
+        </div>
+    </div>
+
+    <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="form.invalid"
+    >Вхід</button>
+</form>
