--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,39 @@
-<p>dashboard-page works!</p>
+<div *ngIf="posts.length; else loading">
+   <div class="form-control">
+       <input type="text" placeholder="Найти пост...">
+   </div>
+    <table>
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Автор</th>
+            <th>Назва</th>
+            <th>Дата</th>
+            <th>Дія</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let post of posts; let idx = index">
+            <td>{{ idx + 1 }}</td>
+            <td>{{ post.author }}</td>
+            <td>{{ post.title }}</td>
+            <td>{{ post.date | date:'medium' }}</td>
+            <td>
+                <button
+                        class="btn btn-link open"
+                        [routerLink]="['/admin', 'post', post.id, 'edit' ]"
+                >
+                    Відкрити
+                </button>
+                <button>
+                    <a (click)="remove(post.id)">Видалити</a>
+                </button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<ng-template #loading>
+    <p class="text-center">Йде завантажиння...</p>
+</ng-template>
