--- a/src/app/admin/edit-page/edit-page.component.html
+++ b/src/app/admin/edit-page/edit-page.component.html
@@ -21,7 +21,7 @@
         <button
                 class="btn btn-primary"
                 type="submit"
-                [disabled]="form.invalid"
+                [disabled]="form.invalid || submitted"
         >Обновити</button>
     </form>
 </div>
