--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -1,14 +1,14 @@
 <div class="card">
     <div class="card-header">
-        <h2>Post title</h2>
+        <h2>{{post.title}}</h2>
 
-        <small>14.05.2020</small>
+        <small>{{post.date | date:'dd.MM.yyyy'}}</small>
     </div>
     <div>
-        <small>Vladilen</small>
+        <small>{{post.author}}</small>
     </div>
     <button
-            [routerLink]="['/post',1232]"
+            [routerLink]="['/post',post.id]"
             class="btn btn-dark"
     >Відкрити</button>
 </div>
