--- a/src/app/admin/shared/components/alert/alert.component.html
+++ b/src/app/admin/shared/components/alert/alert.component.html
@@ -3,7 +3,7 @@
     [ngClass]="{
     'alert-success': type === 'success',
     'alert-warning': type === 'warning ',
-    'alert-success': type === 'danger'
+    'alert-danger': type === 'danger'
     }" >
         <p>{{text}}</p>
     </div>
