--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -9,6 +9,7 @@
         </div>
         <div class="info">
             <strong>{{post.author}}</strong>
+            <strong>{{post.tag}}</strong>
             <small>{{post.date | date: 'medium':null:'ua'}}</small>
         </div>
         <div>
