--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -7,6 +7,9 @@
     <div>
         <small>{{post.author}}</small>
     </div>
+    <div>
+        <small>{{post.tag}}</small>
+    </div>
     <button
             [routerLink]="['/post',post.id]"
             class="btn btn-dark"
