--- a/src/app/admin/dashboard-page/dashboard-page.component.scss
+++ b/src/app/admin/dashboard-page/dashboard-page.component.scss
@@ -1,3 +1,18 @@
 .open{
   margin-right: 20px;
 }
+.text{
+  margin-bottom: 15em;
+}
+.example-section {
+   margin: 12px 0;
+ }
+
+.example-margin {
+  margin: 0 12px;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: 4px;
+}
