--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,6 +104,7 @@ img {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
+  margin-bottom: 0.8em;
 
   &:disabled {
     cursor: not-allowed;
@@ -259,6 +260,19 @@ table td {
 table th {
   background: var(--light-color);
 }
+.example-section {
+  margin: 12px 0;
+}
+
+.example-margin {
+  margin: 0 12px;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: 4px;
+}
+
 
 .navbar {
   display: flex;
