--- a/src/app/admin/shared/get-check-box/get-check-box.component.html
+++ b/src/app/admin/shared/get-check-box/get-check-box.component.html
@@ -1,21 +1,11 @@
-<section class="example-section">
-  <span class="example-list-section">
-    <mat-checkbox class="example-margin"
-                  [checked]="allComplete"
-                  [indeterminate]="someComplete()"
-                  (change)="setAll($event.checked)">
-      {{task.name}}
-    </mat-checkbox>
-  </span>
-  <span class="example-list-section">
-    <ul>
-      <li *ngFor="let subtask of task.subtasks">
-        <mat-checkbox [(ngModel)]="subtask.completed"
-                      [color]="subtask.color"
-                      (ngModelChange)="updateAllComplete()">
-          {{subtask.name}}
-        </mat-checkbox>
-      </li>
-    </ul>
-  </span>
-</section>
+<div class="container">
+  <div *ngFor="let item of field; let i = index;">
+    <md-checkbox [checked]="item.checked" (change)="onChange($event, i, item)">
+      {{item.label}}
+    </md-checkbox>
+  </div>
+
+  <br>
+
+  <strong>Last action:</strong> {{lastAction || 'untouched' }}
+
