--- a/src/app/admin/shared/get-check-box/get-check-box.component.html
+++ b/src/app/admin/shared/get-check-box/get-check-box.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div *ngFor="let item of field; let i = index;">
-    <md-checkbox [checked]="item.checked" (change)="onChange($event, i, item)">
+    <mat-checkbox [checked]="item.checked" (change)="onChange($event, i, item)">
       {{item.label}}
-    </md-checkbox>
+    </mat-checkbox>
   </div>
 
   <br>
